--- a/FormulaCareer.html
+++ b/FormulaCareer.html
@@ -15,7 +15,7 @@
     <table>
         <tbody>
             <tr>
-                <td><img src="./images/BMW Sauber.jpg" alt="BMW Sauber" title="BMW Sauber">
+                <td><img src="./images/BMW Sauber.jpg" alt="BMW Sauber" title="BMW Sauber" width="400px">
                 <center><strong>BMW Sauber</strong></center>
                 </td>
                 <td><p>Vettel became BMW Sauber's third driver at the 2006 Turkish Grand Prix, when former incumbent Robert Kubica replaced
@@ -77,20 +77,20 @@
                 </p>
                 Vettel was named 2008 Rookie of the Year at the Autosport Awards.
             </td>
-                <td><img src="./images/vettel toro rosso.jpg" alt=""height="300" title="Toro Rosso STR3">
+                <td><img src="./images/vettel toro rosso.jpg" alt=""width="400px" title="Toro Rosso STR3">
                 <center><strong>Toro Rosso STR3</strong></center>
             </td>
                 
             </tr>
         </tbody>
     </table> <br>
-    <h2>Red Bull(2009-2014</h2>
+    <h2>Red Bull(2009-2014)</h2>
     <h3>2009–2010: Championship runner-up and youngest world champion</h3>
     <table>
         <tbody>
             <tr>
                 <td>
-                    <img src="./images/rb5.jpg" alt="rb5" width="300" title="Red Bull RB5">
+                    <img src="./images/rb5.jpg" alt="rb5" width="400px" title="Red Bull RB5">
                     <center><strong>Red Bull RB5</strong></center>
                 </td>
                 <td rowspan="2">
@@ -139,7 +139,7 @@
             </tr>
             <tr>
                 <td>
-                    <img src="./images/rb6.jpg" alt="rb6" title="Red Bull RB6">
+                    <img src="./images/rb6.jpg" alt="rb6" title="Red Bull RB6" width="400px">
                     <center><strong>Red Bull RB6</strong></center>
                 </td>
             </tr>
@@ -209,12 +209,12 @@
                     </p>
                 </td>
                 <td>
-                    <img src="./images/rb7.jpg" alt="rb7" title="Red Bull RB7" width="400"><center><strong>Red Bull RB7</strong></center>
+                    <img src="./images/rb7.jpg" alt="rb7" title="Red Bull RB7" width="400px"><center><strong>Red Bull RB7</strong></center>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="./images/rb8.jpg" alt="rb8" title="Red Bull RB8" width="400"> <center><strong>Red Bull RB8</strong></center>
+                    <img src="./images/rb8.jpg" alt="rb8" title="Red Bull RB8" width="400px"> <center><strong>Red Bull RB8</strong></center>
                 </td>
             </tr>
         </tbody>
@@ -224,7 +224,7 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="./images/rb9.jpg" alt="rb9" title="Red Bull RB9" width="400">
+                    <img src="./images/rb9.jpg" alt="rb9" title="Red Bull RB9" width="400px">
                     <center><strong>Red Bull RB9</strong></center>
                 </td>
                 <td rowspan="2">
@@ -276,7 +276,7 @@
             </tr>
             <tr>
                 <td>
-                    <img src="./images/rb10.jpg" alt="rb10" title="Red Bull RB10" width="400">
+                    <img src="./images/rb10.jpg" alt="rb10" title="Red Bull RB10" width="400px">
                     <center><strong>Red Bull RB10 (Mark Webber- Sebastian Vettel)</strong></center>
                 </td>
             </tr>
@@ -341,13 +341,13 @@
                     </p>
                 </td>
                 <td>
-                    <img src="./images/Ferrari SF15t.jpg" alt="SF15-T" width="300" title="Ferrari SF15-T">
+                    <img src="./images/Ferrari SF15t.jpg" alt="SF15-T" width="400px" title="Ferrari SF15-T">
                     <center><strong>Ferrari SF15-T</strong></center>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="./images/sf16h.jpg" alt="sf16h" title="Ferrari SF16-H">
+                    <img src="./images/sf16h.jpg" alt="sf16h" title="Ferrari SF16-H" width="400">
                     <center><strong>Ferrari SF16-H</strong></center>
                 </td>
             </tr>
@@ -358,7 +358,7 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="./images/SF70h.jpg" alt="SF70h" title="Ferrari SF70-H" width="300">
+                    <img src="./images/SF70h.jpg" alt="SF70h" title="Ferrari SF70-H" width="400px">
                     <center><strong>Ferrari SF70-H</strong></center>
                 </td>
                 <td rowspan="2">
@@ -420,7 +420,8 @@
             </tr>
             <tr>
                 <td>
-                    <img src="./images/sf71h.jpg" alt="">
+                    <img src="./images/sf71h.jpg" alt="sf71h" title="Ferrari SF71-h" width="400px">
+                    <center><strong>Ferrari SF71-H</strong></center>
                 </td>
             </tr>
         </tbody>
@@ -475,13 +476,13 @@
                         </p>
                 </td>
                 <td>
-                    <img src="./images/sf90h.jpg" alt="sf90h" width="300" title="Ferrari SF90H">
+                    <img src="./images/sf90h.jpg" alt="sf90h" width="400" title="Ferrari SF90H">
                     <center><strong>Ferrari SF90h</strong></center>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="./images/sf1000.jpg" alt="sf1000" width="300" title="Ferrari SF1000">
+                    <img src="./images/sf1000.jpg" alt="sf1000" width="400" title="Ferrari SF1000">
                     <center><strong>Ferrari SF1000</strong></center>
                 </td>
             </tr>
@@ -492,7 +493,7 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="./images/astonmartin.jpg" alt="astonmartin" width="300" title="Aston Martin AMR21">
+                    <img src="./images/astonmartin.jpg" alt="astonmartin" width="400" title="Aston Martin AMR21">
                     <center><strong>Aston Martin AMR21</strong></center>
                 </td>
                 <td>
